--- a/style.css
+++ b/style.css
@@ -15,30 +15,45 @@ body{
 .container{
    /* position: relative; */
    border-radius: 10px;
-   padding: 10px 135px 20px;
+   padding: 1rem 2rem;
    background-color: white;
-    /* box-shadow: 0 5px 10px white(250, 247, 247); */
+   border-radius: 10px 10px 0 0;
 }
 
-.display{
-   height: 30px;
-   width: 110%;
-   text-align: right;
-   margin-bottom: 0.5px;
-   font-size: 30px;
-   color: #0d0d0d;
- 
-
+.container > .display{
+    height: 30px;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column-reverse;
+    text-align: right;
+    margin-bottom: 0.5px;
+    font-size: 30px;
+    color: #0d0d0d;
 }
 
 .buttons{
-    width:  60px;
-    height: 60px;
+    /* width:  60px; */
+    /* height: 60px; */
     display: grid;
     grid-gap: 10px;
-    /* text-align: center; */
     grid-template-columns: repeat(4, 1fr);
     background-color: white;
+    justify-items: center;
+    align-items: center;
+    padding: 2rem
+    /* border-radius: 12px; */
+    /* font-size: 20px; */
+    /* color: rgb(9, 9, 9); */
+    /* cursor: pointer; */
+    /* padding: 10px; */
+    /* border: 1px solid #0d0d0d; */
+    /* box-sizing: border-box; */
+    /* text-align: center; */
+}
+
+.buttons > .button {
+    width:  60px;
+    height: 60px;
     border-radius: 12px;
     font-size: 20px;
     color: rgb(9, 9, 9);
@@ -46,13 +61,20 @@ body{
     padding: 10px;
     border: 1px solid #0d0d0d;
     box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
 }
 
-#specialButton{
-    width: 120px;
+.butons > #specialButton{
+    width: 130px;
     height: 60px;
     box-sizing: border-box;
+    grid-column-start: 3;
+    grid-column-end: 5;
 }
+
 
 
 
