--- a/style.css
+++ b/style.css
@@ -9,34 +9,35 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #292828e6;
-    
+    background: #292828e6;    
 }
 
 *, *::before, *::after {
     background-color: #000000d8;
-    border-radius: 0px 0px 40px 40px;
+    border-radius: 40px 40px 40px 40px;
 }
 
 .container{
-   padding: 1rem 2rem;
    background-color: #000000d8;
    border: 0.1px solid white;
-   border-radius: 30px 30px 30px 30px ;
+   border-radius: 40px 40px 40px 40px ;
 }
 
 .container > .display{
-    height: 30px;
+    height: 90px;
     display: flex;
     flex-grow: 1;
     flex-direction: column-reverse;
     text-align: right;
-    margin-bottom: 0.5px;
-    font-size: 30px;
+    padding-right: 15px;
+    font-size: 50px;
     color: #faf7f7;
+    border: 1px solid white;
+    border-radius: 40px 40px 30px 30px;
+    border-top: none;
 }
 
-.buttons{
+.container > .buttons{
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(4, 1fr);
@@ -44,12 +45,9 @@ body{
     justify-items: center;
     align-items: center;
     padding: 2rem;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
 }
 
-.buttons > .button {
+.container > .buttons > .button {
     width:  60px;
     height: 60px;
     border-radius: 12px;
@@ -67,7 +65,7 @@ body{
 
 }
 
-.buttons > #specialButton{
+.container > .buttons > #specialButton{
     width: 130px;
     height: 60px;
     box-sizing: border-box;
